<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="me.varunon9.fitto.MainActivity">
    <item
        android:id="@+id/action_play_with_computer"
        android:orderInCategory="100"
        android:title="@string/action_play_with_computer"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_settings"
        android:orderInCategory="200"
        android:title="@string/action_settings"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_instructions"
        android:orderInCategory="300"
        android:title="@string/action_instructions"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_play_with_player"
        android:orderInCategory="400"
        android:title="@string/action_play_with_player"
        app:showAsAction="never" />
</menu>
