<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/activity_vertical_margin">

    <me.varunon9.fitto.PlayerCanvasBoardView
        xmlns:custom="http://schemas.android.com/apk/res-auto"
        android:id="@+id/playerCanvasBoardView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_marginBottom="55dp"
        custom:player1StoneColor="@string/player1_stone_color"
        custom:player2StoneColor="@string/player2_stone_color"
        custom:margin="20"
        custom:stoneRadius="20"
        custom:player1="@string/player1"
        custom:player2="@string/player2"
        custom:maximumInitialStones="8"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true">

        <Button
            android:id="@+id/undoButton"
            android:textAlignment="center"
            android:text="Undo"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:enabled="false"/>

        <Button
            android:id="@+id/restartButton"
            android:textAlignment="center"
            android:text="Restart"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1" />

    </LinearLayout>

</RelativeLayout>